force-app/main/default/objects/Assignment_Group__c/fields/Lead_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage__c</fullName>
    <label>Lead Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>