force-app/main/default/objects/Assignment_Group__c/fields/Lead_Stage_Exceed_Count__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage_Exceed_Count__c</fullName>
    <label>Lead Stage Exceed Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>