force-app/main/default/objects/Assignment_Group__c/fields/Number_of_Members__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Members__c</fullName>
    <label>Number of Members</label>
    <summaryForeignKey>Assignment_Group_Member__c.Assignment_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>